# divavault

./: .gitignore  CLAUDE-INVESTIGATIONS.md  CLAUDE.md  HANDOFF.md  MADE_OF_US_PROJECT_KNOWLEDGE.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  render.yaml
apps/scanner/: .dockerignore  CLAUDE.md  Dockerfile  README.md  SETUP-4090.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
apps/scanner/migrations/: 007_resilience_tables.sql  008_circuit_breaker_columns.sql  009_performance_indexes.sql  add_analyzer_columns.sql  add_deepfake_phase2.sql  add_ml_tables.sql  add_model_state_columns.sql  add_source_intelligence_tables.sql  add_taxonomy_mapper.sql  add_test_user_tables.sql
apps/scanner/scripts/: check_health.ps1  crawl_and_backfill.py  crawl_deviantart.py  crawl_fourchan.py  crawl_reddit.py  install_scheduled_task.ps1  install_watchdog_task.ps1  instrumented_test_crawl.py  process_faces.py  run_deepfake_processor.py  run_production.ps1  run_stage.py  stop_scanner.ps1  test_resilience.py  watchdog.ps1
apps/scanner/src/: config.py  main.py
apps/scanner/src/ad_intelligence/: ad_scanner.py  cross_matcher.py  models.py  prompt_reconstructor.py  queries.py  scheduler.py  stock_searcher.py
apps/scanner/src/api/: admin.py  match_review.py
apps/scanner/src/db/: connection.py  models.py  queries.py
apps/scanner/src/deepfake/: ai_detect.py  downloader.py  frame_extractor.py  metadata.py  news_search.py  processor.py  provenance.py  reverse_search.py  utils.py  wire_search.py
apps/scanner/tests/: conftest.py
(+641 files in other folders)
