[project]
name = "madeofus-scanner"
version = "0.1.0"
description = "Face matching scanner service for Made Of Us"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 100
